@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	6.6
-Entered-date:	2006-03-07
+Version:	6.7
+Entered-date:	2006-10-05
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v6.7 misc fixes, new -H flag, fixed -C flag
 		v6.6 fix build on Redhat/Fedora
 		v6.5 fix -I bugs introduced in v6.4
 		v6.4 major update for -I, bug fix for -C
@@ -52,7 +53,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		46K hdparm-6.6.tar.gz
+		47K hdparm-6.7.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
